_archive/governance-services/2.1/concepts/rm-auditing.md
---
author: Alfresco Documentation
source: 
audience: [, ]
category: Getting Started
option: Records Management
---

# Auditing Records

You can view audit logs for record categories, record folders, and records.

The audit log contains the entire history of an object since the point it was added to the File Plan, and can be useful for finding out about specific events that have occurred during an objects life cycle, and any users that have been involved.

Every entry in the audit log is timestamped and where metadata has been changed, the original values and changed values are recorded.

When viewing an audit log you can also select to export it or to file it as a record.

**Note:** Alfresco administrators can run an audit of the entire Records Management system using the Records Management Admin Console.

-   **[Viewing an audit log](../tasks/rm-audit-viewing.md)**  
You can view audit logs for record categories, record folders, and records.

**Parent topic:**[Using Records Management](../concepts/rm-intro.md)

