_archive/governance-services/2.2/concepts/rm-auditing.md
---
author: Alfresco Documentation
source: 
audience: [, ]
category: Getting Started
option: Records Management
---

# Auditing and reporting

You can view audit logs for record categories, record folders, and records, and whenever a record or folder is transferred, added to a hold, accessioned, or destroyed, you can file a report to keep a record of the process.

**Note:** You can only view audit logs if your Alfresco administrator has given you the Access Audit permission.

Whenever a record is transferred, added to a hold, accessioned or destroyed, you have the option to file a report. The report contains details of the item, the disposition authority, what the disposition step was, when it was performed, who by, and any location changes. The report is filed as a record.

The audit log contains the entire history of an object since the point it was added to the File Plan, and can be useful for finding out about specific events that have occurred during an objects life cycle, and any users that have been involved.

Every entry in the audit log is timestamped and where metadata has been changed, the original values and changed values are recorded.

When viewing an audit log you can also select to export it or to file it as a record.

**Note:** Users with access to the Records Management Admin Console can run an audit of the entire Records Management system.

-   **[../tasks/rm-file-report.md](../tasks/rm-file-report.md)**  

-   **[../tasks/rm-audit-viewing.md](../tasks/rm-audit-viewing.md)**  


**Parent topic:**[Using Records Management](../concepts/rm-intro.md)

